--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,15 +16,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WeatherForecast"
         tools:targetApi="31">
+        <activity
+            android:name=".settingPage.SettingActivity"
+            android:exported="false" />
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDyQwg8eDwXdv1ybyIfOJlPgS0ldeUPfFo" />
-        <!--        <meta-data-->
-        <!--            android:name="com.google.android.gms.version"-->
-        <!--            android:value="@integer/google_play_services_version" />-->
-        <!--        <meta-data-->
-        <!--            android:name="com.google.android.geo.API_KEY"-->
-        <!--            android:value="AIzaSyAbuHdF1hB_ddtCtgEZ7iE3cDqXk4zpVJU" />-->
+            android:value="AIzaSyDyQwg8eDwXdv1ybyIfOJlPgS0ldeUPfFo" /> <!-- <meta-data -->
+        <!-- android:name="com.google.android.gms.version" -->
+        <!-- android:value="@integer/google_play_services_version" /> -->
+        <!-- <meta-data -->
+        <!-- android:name="com.google.android.geo.API_KEY" -->
+        <!-- android:value="AIzaSyAbuHdF1hB_ddtCtgEZ7iE3cDqXk4zpVJU" /> -->
         <activity
             android:name=".favoritePage.view.MapActivity"
             android:exported="false" />
