--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,12 +17,15 @@
         android:theme="@style/Theme.WeatherForecast"
         tools:targetApi="31">
         <activity
+            android:name=".favoritePage.view.FavoriteCountry"
+            android:exported="false" />
+        <activity
             android:name=".settingPage.SettingActivity"
             android:exported="false" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDyQwg8eDwXdv1ybyIfOJlPgS0ldeUPfFo" /> <!-- <meta-data -->
+            android:value="AIzaSyAlSTQ-ZJiXkdKRouizAp1cXgi7TKc6ZOA" /> <!-- <meta-data -->
         <!-- android:name="com.google.android.gms.version" -->
         <!-- android:value="@integer/google_play_services_version" /> -->
         <!-- <meta-data -->
